@@ -1,5 +1,5 @@
 N:*:Default
-495
+496
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -495,3 +495,4 @@ They say that some dungeons have only one-way traffic.
 They say that some dungeons have no exit.
 Dance a tap with Witan boots on!
 They say that you should stop and think it twice if someone chuckles at you.
+They say that a true thief never makes a sound.
